--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/upgrades": "^2.8.0",
     "truffle": "^5.1.41"
+  },
+  "devDependencies": {
+    "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/truffle-upgrades": "^1.1.0"
   }
 }
